use Set.of instead of HashSet and Arrays.asList